website/code/raytracer-icpp.log
BUILD COMMANDS FOR: raytracer.icpp

Fri Mar 31 22:22:31 PST 2006

/opt/intel/cc/9.0/bin/icpc -c -O3 -ip -static -unroll  raytracer.c++ -o raytracer.c++.o &&  \
        /opt/intel/cc/9.0/bin/icpc raytracer.c++.o -o raytracer.icpp_run -O3 -ip -static -unroll  
/usr/include/c++/4.0.3/cmath(353): error: identifier "__builtin_powi" is undefined
    { return __builtin_powi(__x, __i); }
             ^

/usr/include/c++/4.0.3/cmath(357): error: identifier "__builtin_powif" is undefined
    { return __builtin_powif(__x, __n); }
             ^

/usr/include/c++/4.0.3/cmath(361): error: identifier "__builtin_powil" is undefined
    { return __builtin_powil(__x, __n); }
             ^

compilation aborted for raytracer.c++ (code 2)
make[3]: [raytracer.icpp_run] Error 2 (ignored)
rm: cannot remove `raytracer.c++.o': No such file or directory
rm: cannot remove `raytracer.o': No such file or directory
make[3]: [raytracer.icpp_run] Error 1 (ignored)

=================================================================
COMMAND LINE (%A is single numeric argument):

raytracer.icpp_run %A
Error, could not exec raytracer.icpp_run 20 (No such file or directory)
PATH=/opt/shootout/shootout/bench/raytracer:/opt/shootout/shootout/bench/raytracer/tmp:/opt/xds_x86/bin:/opt/intel/fc/9.0/bin:/opt/intel/cc/9.0/bin:/usr/lib/poplog/current-poplog/pop/pop:/usr/lib/smarteiffel/bin:/usr/local/Acrobat5/bin:/usr/lib/postgresql/bin:/home/brent/GNUstep/Tools:/usr/local/lib/GNUstep/Local/Tools:/usr/local/lib/GNUstep/Network/Tools:/usr/lib/GNUstep/System/Tools:/usr/local/bin:/usr/bin:/bin:/usr/bin/X11:/usr/games:/usr/lib/poplog/current-poplog/pop/com
TEST FAILED - Child processed exited with error code (1)


PROGRAM OUTPUT
==============
